--- a/src/global.css
+++ b/src/global.css
@@ -1,9 +1,13 @@
 :root {
+    --gray-200: #D9D9D9;
     --gray-300: #808080;
+    --gray-400: #333333;
     --gray-600: #1A1A1A;
     --gray-700: #0D0D0D;
 
+    --white: white;
     --blue: #4EA8DE;
+    --purple: #8284FA;
     --purple-dark: #5E60CE;
 }
 
@@ -17,8 +21,7 @@ body {
     background: var(--gray-600);
     color: var(--gray-300);
     -webkit-font-smoothing: antialiased;
-    display: flex;
-    flex-direction: column;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 body,
