--- a/src/global.css
+++ b/src/global.css
@@ -1,14 +1,19 @@
 :root {
+    --gray-100: #F2F2F2;
     --gray-200: #D9D9D9;
     --gray-300: #808080;
     --gray-400: #333333;
+    --gray-500: #262626;
     --gray-600: #1A1A1A;
     --gray-700: #0D0D0D;
 
-    --white: white;
     --blue: #4EA8DE;
+    --blue-dark: #1E6F9F;
+    --translucent-blue-dark: rgba(30, 111, 159, 0.2);
     --purple: #8284FA;
     --purple-dark: #5E60CE;
+
+    --danger: #E25858;
 }
 
 * {
@@ -31,4 +36,37 @@ button {
     font-family: "Inter", sans-serif;
     font-weight: 400;
     font-size: 1rem;
+    line-height: 140%;
+}
+
+input[type="text"],
+button {
+    border-radius: 8px;
+}
+
+button {
+    background-color: var(--blue-dark);
+    color: var(--gray-100);
+    border: none;
+    cursor: pointer;
+
+    transition: background-color 0.1s;
+}
+
+button:hover {
+    background-color: var(--blue);
+}
+
+input[type="text"] {
+    background-color: var(--gray-500);
+    border: 1px solid var(--gray-700);
+    padding: 1rem;
+    color: var(--gray-100);
+
+    transition: border-color 0.1s;
+}
+
+input[type="text"]:focus {
+    outline: none;
+    border-color: var(--purple-dark);
 }
